made gradle package the jar as a shadow jar/fat jar, which fixed it not being able to find the MixinBootstrap class, but it still can't seem to find the GuiConnecting one and idk why